Fix: invisible content

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   font-variant-numeric: tabular-nums;
   font-feature-settings: "tnum";
   background-color: #000;
-  color: rgba(255, 255, 255, 0.2);
+  color: rgba(255, 255, 255, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,8 +60,8 @@ body {
 
 /* Dimming after idle */
 body.dim-screen {
-  filter: brightness(0.35);
-  transition: filter 1s ease-in-out;
+  filter: brightness(0.5);
+  transition: filter 3s ease-in-out;
   will-change: filter;
 }
 
@@ -73,7 +73,7 @@ main {
   justify-content: center;
   min-height: 100vh;
   text-align: center;
-  animation: scale 5s ease-in-out infinite;
+  animation: glow 6s ease-in-out infinite;
   will-change: transform, opacity;
 }
 
@@ -96,7 +96,7 @@ main {
 }
 
 /* Animations */
-@keyframes scale {
+@keyframes glow {
 
   0%,
   100% {
